objects/Community_Content__c.object
<CustomObject>
    <fields>
        <fullName>Caption__c</fullName>
        <label>Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Name__c</fullName>
        <formula>Tab__r.Community__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab__c</fullName>
        <label>Tab</label>
        <referenceTo>Community_Tab__c</referenceTo>
        <relationshipLabel>Community Contents</relationshipLabel>
        <relationshipName>Community_Contents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>User Guide</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Community Content</label>
    <nameField>
        <label>Community Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>